--- a/css/styles.css
+++ b/css/styles.css
@@ -119,12 +119,12 @@ main.container {
 /* Carousel Styles */
 .carousel-item img {
     width: 100%;
-    height: 500px; /* Set a uniform height for the images */
-    object-fit: cover; /* Ensure images cover the entire container */
+    height: 500px; 
+    object-fit: cover; 
 }
 
 .carousel-caption {
-    background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    background: rgba(0, 0, 0, 0.5); 
     padding: 10px;
     border-radius: 10px;
 }
